letschat/base/smee-dc.yaml
apiVersion: v1
items:
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      argocd.argoproj.io/compare-options: IgnoreExtraneous,IgnoreDifference=/spec/template/spec/containers/0/image
      openshift.io/generated-by: OpenShiftNewApp
    labels:
      app.kubernetes.io/component: smee-client
      app.kubernetes.io/name: smeeclient-chat
      app.kubernetes.io/part-of: lets-chat
      app: lets-chat
    name: smee
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      app: smee
      deploymentconfig: smee
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
          argocd.argoproj.io/sync-options: Validate=false
          argocd.argoproj.io/compare-options: IgnoreExtraneous,IgnoreDifference=/spec/containers/0/imag
        creationTimestamp: null
        labels:
          app: smee
          deploymentconfig: smee
      spec:
        containers:
          - env:
              - name: HTTPTARGET
                value: >-
                  https://rhos-10:8443/apis/build.openshift.io/v1/namespaces/seb/buildconfigs/lets-chat/webhooks/Y93Q3RDx7N7CdA8VH3te/github
              - name: NODE_TLS_REJECT_UNAUTHORIZED
                value: '0'
              - name: SMEESOURCE
                value: 'https://smee.io/dD3FhY3BKh7eJb'
            image: smee:latest
            imagePullPolicy: Always
            name: smee
            ports:
              - containerPort: 8080
                protocol: TCP
                name: http
            resources: {}
            terminationMessagePath: /dev/termination-log
            terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
    test: false
    triggers:
      - type: ConfigChange
      - imageChangeParams:
          automatic: true
          containerNames:
            - smee
          from:
            kind: ImageStreamTag
            name: 'smee:latest'
        type: ImageChange
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
